--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ html, body {
   justify-content: space-around;
   align-items: center;
   padding-bottom: 3vh;
+  cursor: pointer;
+  
 }
 
 #character-bar span {
@@ -29,7 +31,7 @@ html, body {
   width: 8vw;
   display: flex;
   justify-content: center;
-  font-size: 3vh;
+  font-size: 2.3vh;
   align-items: center;
   border-radius: 2em;
   border: 1px solid white;
